--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/paper/dist/paper-full.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
-    <script src="bower_components/dat.gui/dat.gui.min.js"></script>
+    <script src="bower_components/dat.gui/dat.gui.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -46,6 +46,10 @@
     </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="scripts/perlin.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
+        <script src="scripts/helpers.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
+        <script src="scripts/balls.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
+        <script src="scripts/shaft.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <script src="scripts/main.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <!-- endbuild -->
 </body>
