--- a/app/index.html
+++ b/app/index.html
@@ -50,6 +50,8 @@
         <script src="scripts/helpers.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <script src="scripts/balls.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <script src="scripts/shaft.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
+        <script src="scripts/ball.hair.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
+        <script src="scripts/pubes.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <script src="scripts/main.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <!-- endbuild -->
 </body>
