--- a/app/index.html
+++ b/app/index.html
@@ -48,6 +48,7 @@
         <!-- build:js({app,.tmp}) scripts/main.js -->
         <script src="scripts/perlin.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <script src="scripts/helpers.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
+        <script src="scripts/grid.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <script src="scripts/balls.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <script src="scripts/shaft.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
         <script src="scripts/ball.hair.js" type="text/paperscript" src="js/myScript.js" canvas="myCanvas"></script>
